--- a/templates/log.html
+++ b/templates/log.html
@@ -344,5 +344,40 @@
                 row.insertCell(3).innerText = msg.message;
             }
     </script>
+    <script>
+  let latestId = 0;
+
+  // تحميل الرسائل القديمة عند بداية الصفحة
+  fetch('/get_all_messages')
+    .then(res => res.json())
+    .then(data => {
+      data.forEach(msg => {
+        addMessageToTable(msg);
+        if (msg.id > latestId) latestId = msg.id;
+      });
+    });
+
+  // تحديث الرسائل الجديدة كل ثانيتين
+  setInterval(() => {
+    fetch(`/get_new_messages?after=${latestId}`)
+      .then(res => res.json())
+      .then(newMessages => {
+        newMessages.forEach(msg => {
+          addMessageToTable(msg);
+          if (msg.id > latestId) latestId = msg.id;
+        });
+      });
+  }, 2000);
+
+  // دالة لإضافة صف جديد للجدول
+  function addMessageToTable(msg) {
+    const table = document.getElementById("messagesTable").getElementsByTagName('tbody')[0];
+    const row = table.insertRow(-1);
+    row.insertCell(0).innerText = msg.system_time;
+    row.insertCell(1).innerText = msg.time_sent;
+    row.insertCell(2).innerText = msg.username;
+    row.insertCell(3).innerText = msg.message;
+  }
+</script>
 </body>
 </html>
